Adding GW simulation and spectrogram

--- a/pyomega/Notebook/PyOmegaScan.ipynb
+++ b/pyomega/Notebook/PyOmegaScan.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -122,28 +122,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "Cannot find all relevant data on any known server. Try again using the verbose=True keyword argument to see detailed failures.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-788051913712>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# Read in the data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTimeSeries\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchannelName\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mstartTime\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mstopTime\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m# resample data if necessary\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/ciera/Library/Python/2.7/lib/python/site-packages/gwpy/utils/deps.pyc\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     80\u001b[0m             func.func_globals[modname] = import_method_dependency(module,\n\u001b[1;32m     81\u001b[0m                                                                   stacklevel=2)\n\u001b[0;32m---> 82\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     83\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     84\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mdecorate_method\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/ciera/Library/Python/2.7/lib/python/site-packages/gwpy/timeseries/core.pyc\u001b[0m in \u001b[0;36mfetch\u001b[0;34m(cls, channel, start, end, host, port, verbose, connection, verify, pad, type, dtype)\u001b[0m\n\u001b[1;32m    267\u001b[0m             \u001b[0;34m[\u001b[0m\u001b[0mchannel\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstart\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhost\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mhost\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mport\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mport\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    268\u001b[0m             \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mverbose\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconnection\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconnection\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverify\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mverify\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 269\u001b[0;31m             pad=pad, type=type, dtype=dtype)[str(channel)]\n\u001b[0m\u001b[1;32m    270\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    271\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mclassmethod\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/ciera/Library/Python/2.7/lib/python/site-packages/gwpy/utils/deps.pyc\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     80\u001b[0m             func.func_globals[modname] = import_method_dependency(module,\n\u001b[1;32m     81\u001b[0m                                                                   stacklevel=2)\n\u001b[0;32m---> 82\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     83\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     84\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mdecorate_method\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/ciera/Library/Python/2.7/lib/python/site-packages/gwpy/timeseries/core.pyc\u001b[0m in \u001b[0;36mfetch\u001b[0;34m(cls, channels, start, end, host, port, verify, verbose, connection, pad, type, dtype)\u001b[0m\n\u001b[1;32m    753\u001b[0m                 e += (\" Try again using the verbose=True keyword argument to \"\n\u001b[1;32m    754\u001b[0m                       \"see detailed failures.\")\n\u001b[0;32m--> 755\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mRuntimeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    756\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    757\u001b[0m         \u001b[0;31m# at this point we must have an open connection, so we can proceed\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: Cannot find all relevant data on any known server. Try again using the verbose=True keyword argument to see detailed failures."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Pick the start and stop times and a channel name from which to read the data\n",
     "startTime   = 1127699999.0\n",
@@ -183,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -240,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -250,7 +234,7 @@
     "# This function takes in a bunch of parameters  and generates the frequency domain waveforms\n",
     "# Intrinsic parameters:\n",
     "# component masses in kg\n",
-    "m1, m2 = 2 * lal.MSUN_SI, 2 * lal.MSUN_SI\n",
+    "m1, m2 = 30 * lal.MSUN_SI, 30 * lal.MSUN_SI\n",
     "# component spins (Cartesian, normalized to be unitless)\n",
     "s1x, s1y, s1z = 0.0, 0.0, 0.0\n",
     "s2x, s2y, s2z = 0.0, 0.0, 0.0\n",
@@ -268,7 +252,7 @@
     "\n",
     "# We are doing a discrete set of dF not an infinite as the equation above shows\n",
     "delta_f = 0.125\n",
-    "flow = 30\n",
+    "flow = 20\n",
     "fmax = fnyq = 2048\n",
     "samp_rate = 2* fnyq\n",
     "\n",
@@ -287,6 +271,7 @@
     "# For convenience, we'll reuse hpf and redefine to be h1\n",
     "hpf.data.data += hxf.data.data\n",
     "h1 = hpf\n",
+    "\n",
     "GWsim = TimeSeries(h1.data.data.real,sample_rate=samp_rate,epoch=startTime)\n",
     "plot = GWsim.plot()\n",
     "plot.save('GWsimulation.png')"
@@ -308,14 +293,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "specgram = GWsim.spectrogram(1, fftlength=0.5, overlap=0.25) ** (1/2.)\n",
-    "plot = specgram.plot(norm='log', vmin=1e-23, vmax=1e-19)\n",
+    "GWsim =GWsim[0:2048]\n",
+    "specgram = GWsim.spectrogram(0.025, fftlength=0.025, overlap=0.0125) ** (1/2.)\n",
+    "plot = specgram.plot(norm='log', vmin=1e-22, vmax=1e-20)\n",
     "plot.set_yscale('log')\n",
     "plot.set_ylim(40, 2048)\n",
     "plot.add_colorbar(\n",
@@ -401,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -567,11 +553,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-25-e9634aca982b>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-25-e9634aca982b>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    tiling[\"generalparams\"][\"duration\"] = blockTime\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
     "tiling = {}\n",
     "tiling[\"generalparams\"] = {}\n",
