Updating GWsims to be more clear

--- a/pyomega/Notebook/PyOmegaScan.ipynb
+++ b/pyomega/Notebook/PyOmegaScan.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -234,7 +234,7 @@
     "# This function takes in a bunch of parameters  and generates the frequency domain waveforms\n",
     "# Intrinsic parameters:\n",
     "# component masses in kg\n",
-    "m1, m2 = 30 * lal.MSUN_SI, 30 * lal.MSUN_SI\n",
+    "m1, m2 = 15 * lal.MSUN_SI, 15 * lal.MSUN_SI\n",
     "# component spins (Cartesian, normalized to be unitless)\n",
     "s1x, s1y, s1z = 0.0, 0.0, 0.0\n",
     "s2x, s2y, s2z = 0.0, 0.0, 0.0\n",
@@ -248,7 +248,7 @@
     "dist, incl = 1e6 * lal.PC_SI, 0.0\n",
     "\n",
     "# waveform model to use\n",
-    "approx1 = lalsimulation.TaylorF2\n",
+    "approx1 = lalsimulation.SEOBNRv2\n",
     "\n",
     "# We are doing a discrete set of dF not an infinite as the equation above shows\n",
     "delta_f = 0.125\n",
@@ -273,6 +273,7 @@
     "h1 = hpf\n",
     "\n",
     "GWsim = TimeSeries(h1.data.data.real,sample_rate=samp_rate,epoch=startTime)\n",
+    "GWsim =GWsim[0:2048]\n",
     "plot = GWsim.plot()\n",
     "plot.save('GWsimulation.png')"
    ]
@@ -293,13 +294,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "GWsim =GWsim[0:2048]\n",
     "specgram = GWsim.spectrogram(0.025, fftlength=0.025, overlap=0.0125) ** (1/2.)\n",
     "plot = specgram.plot(norm='log', vmin=1e-22, vmax=1e-20)\n",
     "plot.set_yscale('log')\n",
