used sys module to import modules in parent directories

--- a/ML/PythonNUCC/Notebook/NUMLCC.ipynb
+++ b/ML/PythonNUCC/Notebook/NUMLCC.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -31,7 +31,11 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import matplotlib.colors as colors\n",
-    "import gen_data"
+    "import sys\n",
+    "sys.path.insert(0, \"C:\\\\Users\\\\Luke\\\\Documents\\\\GravitySpy\\\\GravitySpy\\\\ML\\\\PythonNUCC\")\n",
+    "sys.path.insert(0, \"C:\\\\Users\\\\Luke\\\\Documents\\\\GravitySpy\\\\GravitySpy\\\\ML\\\\SyracuseCC\")\n",
+    "import gen_data\n",
+    "import read_data"
    ]
   },
   {
