--- a/ML/SyracuseCC/read_classifications.ipynb
+++ b/ML/SyracuseCC/read_classifications.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -18,26 +18,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def CustomParser(data):\n",
+    "    j1 = json.loads(data)\n",
+    "    j1\n",
+    "    return j1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "#####################################\n",
-    "### Define command line arguments ###\n",
-    "#####################################\n",
-    "\n",
-    "def parse_commandline():\n",
-    "    parser = optparse.OptionParser()\n",
-    "    parser.add_option(\"--file\", help=\"Type in the path to the csv file \\\n",
-    "    containing the classifications from the vet training set \\\n",
-    "    workflow\",default=\"example.csv\")\n",
-    "    \n",
-    "    opts, args = parser.parse_args()\n",
-    "    \n",
-    "    return opts\n",
-    "\n",
     "#opts = parse_commandline()\n",
     "class_file = \"gravity-spy-classifications.csv\""
    ]
@@ -54,6 +54,83 @@
     "### READ IN DATA ###\n",
     "data = pd.read_csv(class_file, skiprows=29573, nrows=20008) # This starts with Beta 2.0\n",
     "data = np.asarray(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Int64Index([    0,     1,     2,     3,     4,     5,     6,     7,     8,\n",
+       "                9,\n",
+       "            ...\n",
+       "            56353, 56354, 56355, 56356, 56357, 56358, 56359, 56360, 56361,\n",
+       "            56362],\n",
+       "           dtype='int64', length=56363)"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data1 = pd.read_csv(class_file,converters={'annotations':CustomParser})\n",
+    "data1['annotations'].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "versions = np.unique(data1['workflow_version'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'keys'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-78-bd062aab2a50>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mversion1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'annotations'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m49964\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'keys'"
+     ]
+    }
+   ],
+   "source": [
+    "for iV in versions:\n",
+    "    version1 = data1[data1['workflow_version'] == iV]\n",
+    "    \n",
+    "version1['annotations'][49964]\n",
+    "\n",
+    "\n",
+    "version1['annotations'][49964].keys()"
    ]
   },
   {
