--- a/ML/SyracuseCC/read_classifications.ipynb
+++ b/ML/SyracuseCC/read_classifications.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -2615,6 +2615,7 @@
     "### Function to apply decisions to images ###\n",
     "\n",
     "true_confidences = []\n",
+    "true_labels = []\n",
     "\n",
     "def decider(x):\n",
     "    \n",
@@ -2624,6 +2625,7 @@
     "    maximum = np.amax(v) # Initialize maximum, max value of v\n",
     "    maxIdx = np.argmax(v) # Initialize maxIdx, index of max value of v\n",
     "    true_confidences.append(maximum)\n",
+    "    true_labels.append(maxIdx)\n",
     "\n",
     "    if maximum >= t[maxIdx]: # If maximum is above threshold for given class, retire image\n",
     "        \n",
@@ -2650,17 +2652,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "### Function to plot distribution of true_confidences ###\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "n, bins, patches = plt.hist(true_confidences, 50, normed=False, facecolor='green', alpha=0.75)\n",
     "plt.xlabel('True_label confidence')\n",
     "plt.ylabel('Count')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "### Function to graph empirical cdf of true_confidences for different classes ###\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import colors\n",
+    "\n",
+    "labels = ['WHSTL','LWFRQNCBRST','CHRP','RPTNGBLPS','SCTTRDLGHT','LGHTMDLTN','XTRMLLD','LWFQNCLN','RCMPRSSR50HZ','BLP',\n",
+    "          'PWRLN60HZ','PRDDVS','TMT','WNDRNGLN','HLX','SCRTCH','NNFTHBV','VLNMDHRMNC500HZ','KFSH','NGLTCH']\n",
+    "\n",
+    "whstl_confidence = []\n",
+    "lfburst_confidence = []\n",
+    "chrp_confidence = []\n",
+    "rptblp_confidence = []\n",
+    "scttrd_confidence = []\n",
+    "lghtmd_confidence = []\n",
+    "xtrm_confidence = []\n",
+    "lfln_confidence = []\n",
+    "rcmp_confidence = []\n",
+    "blp_confidence = []\n",
+    "pwrln_confidence = []\n",
+    "prdvs_confidence = []\n",
+    "tmt_confidence = []\n",
+    "wndr_confidence = []\n",
+    "hlx_confidence = []\n",
+    "scrtch_confidence = []\n",
+    "nn_confidence = []\n",
+    "vln_confidence = []\n",
+    "kfsh_confidence = []\n",
+    "ngltch_confidence = []\n",
+    "\n",
+    "for confidence, label in zip(true_confidences,true_labels):\n",
+    "    if label == 0:\n",
+    "        whstl_confidence.append(confidence)\n",
+    "    elif label == 1:\n",
+    "        lfburst_confidence.append(confidence)\n",
+    "    elif label == 2:\n",
+    "        chrp_confidence.append(confidence)\n",
+    "    elif label == 3:\n",
+    "        rptblp_confidence.append(confidence)\n",
+    "    elif label == 4:\n",
+    "        scttrd_confidence.append(confidence)\n",
+    "    elif label == 5:\n",
+    "        lghtmd_confidence.append(confidence)\n",
+    "    elif label == 6:\n",
+    "        xtrm_confidence.append(confidence)\n",
+    "    elif label == 7:\n",
+    "        lfln_confidence.append(confidence)\n",
+    "    elif label == 8:\n",
+    "        rcmp_confidence.append(confidence)\n",
+    "    elif label == 9:\n",
+    "        blp_confidence.append(confidence)\n",
+    "    elif label == 10:\n",
+    "        pwrln_confidence.append(confidence)\n",
+    "    elif label == 11:\n",
+    "        prdvs_confidence.append(confidence)\n",
+    "    elif label == 12:\n",
+    "        tmt_confidence.append(confidence)\n",
+    "    elif label == 13:\n",
+    "        wndr_confidence.append(confidence)\n",
+    "    elif label == 14:\n",
+    "        hlx_confidence.append(confidence)\n",
+    "    elif label == 15:\n",
+    "        scrtch_confidence.append(confidence)\n",
+    "    elif label == 16:\n",
+    "        nn_confidence.append(confidence)\n",
+    "    elif label == 17:\n",
+    "        vln_confidence.append(confidence)\n",
+    "    elif label == 18:\n",
+    "        kfsh_confidence.append(confidence)\n",
+    "    elif label == 19:\n",
+    "        ngltch_confidence.append(confidence)\n",
+    "    else:\n",
+    "        pass\n",
+    "    \n",
+    "titles = [whstl_confidence,lfburst_confidence,chrp_confidence,rptblp_confidence,scttrd_confidence,lghtmd_confidence,\n",
+    "xtrm_confidence,lfln_confidence,rcmp_confidence,blp_confidence,pwrln_confidence,prdvs_confidence,tmt_confidence,\n",
+    "wndr_confidence,hlx_confidence,scrtch_confidence,nn_confidence,vln_confidence,kfsh_confidence,ngltch_confidence]\n",
+    "\n",
+    "f, axarr = plt.subplots(nrows=4,ncols=5)\n",
+    "axarr = axarr.ravel()\n",
+    "\n",
+    "for i in range(20):\n",
+    "    #weights = np.ones_like(titles[i])/float(len(titles[i]))\n",
+    "    counts,bin_edges = np.histogram(titles[i],bins=50,normed=True)\n",
+    "    cdf = (np.cumsum(counts[::-1])[::-1])/np.sum(counts)\n",
+    "    axarr[i].plot(bin_edges[1:],cdf)\n",
+    "    #axarr[i].hist(titles[i],50,normed=False,weights=weights)\n",
+    "    axarr[i].set_title(labels[i])\n",
+    "    axarr[i].set(xlim=([0,1]),ylim=([0,1]))\n",
+    "\n",
     "plt.show()"
    ]
   },
